tests/baselines/reference/withStatement.errors.txt
==== tests/cases/compiler/withStatement.ts (1 errors) ====
    declare var ooo:any;
    
    with (ooo.eee.oo.ah_ah.ting.tang.walla.walla) { // error
          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! withStatement.ts(3,7): error TS2135: All symbols within a with block will be resolved to 'any'.
        bing = true; // no error
        bang = true; // no error
        
        function bar() {}
    
        bar();
            
    }
    